# glowing-spork

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml  i18n.jsonc  justfile
.cargo/: config.toml
.github/workflows/: codeql.yml  mirror.yml
src/: main.rs
src/app/: db.rs  discord.rs  embed.rs  i18n.rs  init.rs  listener.rs  mod.rs  runtime.rs  types.rs
src/entity/: bans.rs  mod.rs  prelude.rs
