[package]
name = "glowing-spork"
version = "0.1.0"
edition = "2024"

[dependencies]
color-print = "0.3.7"
dotenvy = "0.15.7"
env_logger = "0.11.10"
log = "0.4.29"
sea-orm = { version = "1.1.20", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "debug-print",
    "macros",
] }
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["parking_lot"] }
