[package]
name = "glowing-spork"
version = "0.1.0"
edition = "2024"

[dependencies]
color-print = "0.3.7"
dotenvy = "0.15.7"
log = "0.4.29"
poise = "0.6.2"
sea-orm = { version = "1.1.20", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "debug-print",
    "macros",
] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["parking_lot"] }
