[package]
name = "glowing-spork"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = { version = "1.8.4", features = ["rayon", "zeroize", "digest"] }
color-print = "0.3.7"
dotenvy = "0.15.7"
json5 = "1.3.1"
log = "0.4.29"
notify = "8.2.0"
poise = "0.6.2"
quick-xml = { version = "0.39.2", features = ["async-tokio"] }
sea-orm = { version = "1.1.20", features = ["sqlx-postgres", "runtime-tokio-rustls", "debug-print", "macros", "sqlx-sqlite"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["parking_lot"] }
